Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -29,8 +29,7 @@
 
 
 \title{
-\includegraphics[width=0.25\textwidth]{nus_logo.jpeg}
-\includegraphics[width=0.32\textwidth]{cqt_logo.png}\\
+\includegraphics[width=0.32\textwidth]{hu_logo.png}\\
 {\LARGE \textbf{Theory of Rydberg Wave Packets Immersed in Ultracold Gases}}\\
 \vspace{5mm}
 {\normalsize Humboldt Internship Program}
